--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Coba Git Putri</title>
         <style type="text/css">
             body{
@@ -15,4 +15,5 @@
         <script type="text/javascript" src="script.js">
         </script>
     </body>
+
 </html>
